Fix some inconsistencies in spec.
Fix create such that id is not input
